# hand-crafted-RAG

./: README.md  embed-qwen.py  pyproject.toml
