[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="hand-crafted-RAG"
version="0.0.1"
description = "我的第一个手搓 RAG 项目"
authors = [
  { name = "joker", email = "joker@plovehj.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies=[
	"chonkie==1.1.2",
	"chromadb==1.0.20",
	"cohere==5.17.0",
	"colorama==0.4.6",
	"google-genai==1.30.0",
	"langchain==0.3.25",
	"pandas==2.2.3",
	"plotly==6.3.0",
	"umap-learn==0.5.9.post2",
	"openai==1.99.9"
]

# 显式指定顶层模块
[tool.setuptools]
py-modules = [
    "embed-qwen",
    "chunkLangChain"
]

